# account-creation-registrar

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  _stream.py  browser.py  dev.cmd  main.py  ollama.txt  pyproject.toml  run_api.py  run_tts.py  setup.ps1  stop.cmd
.github/workflows/: ci.yml
config/: artificialanalysis.yaml  captcha.yaml  chatgpt.yaml  cloudflare.yaml  config.yaml  elevenlabs.yaml  gmail.yaml  klingai.yaml  leonardo.yaml  logging.yaml  mail.yaml  mailosaur.yaml  ninerouter.yaml  openrouter.yaml  platform.yaml  proton.yaml  sentry.yaml  testmail.yaml  twoslides.yaml
docs/: LOCAL_SETUP.md  README.md  api-reference.md  architecture.md  captcha-solver.md  config-reference.md  enterprise-standards.md  nopecha-research.md  scripts.md  testing.md  troubleshooting.md
docs/modules/: artificialanalysis.md  core.md  proton.md  twoslides.md
docs/superpowers/plans/: 2026-06-17-cloudflare-registrar.md
docs/superpowers/specs/: 2026-06-17-cloudflare-registrar-design.md
scripts/: cf_step1_mailbox.py  cloudflare_dom_dump.py  migrate_checker_service.py  migrate_gmail_router.py  migrate_gmail_to_async.py
src/: __init__.py
src/api/: exceptions.py  schemas.py  server.py
src/api/routers/: aa_proxy.py  accounts.py  config.py  gmail.py  image_lab.py  internal.py  mailbox.py  providers.py  registration.py  sms.py
src/api/services/: aar_client.py  account_service.py  checker_service.py  config_service.py  gmail_inbox_service.py  google_session_service.py  image_lab_job_manager.py  image_lab_service.py  job_manager.py  mailbox_service.py  ninerouter_sync.py  open_browser_service.py  registration_service.py  sync_service.py
src/api/tools/: browser_gateway_engines.py  kling_session_tool.py  open_browser_session.py
src/api/ws/: log_manager.py
src/captcha/: capsolver.py  patchright_solver.py
src/checkers/: __init__.py  base.py  chatgpt.py  elevenlabs.py  openrouter.py
src/cli/: __init__.py  menu.py  runners.py  runners.py.bak
src/config/: settings.py
src/core/: account_record.py  browser.py  database.py.bak  enums.py  errors.py  gmail_variations.py  guard.py  human_mouse.py  logger.py  page_utils.py  password.py  sentry.py  session.py  storage.py  totp.py
src/core/database/: __init__.py  _accounts.py  _engine.py  _mailboxes.py  _migrations.py  _providers.py  _services.py
src/core/google_oauth/: __init__.py  (+5 more)
src/mail/: _base.py  client.py  providers.py
src/services/: errors.py  protocols.py  registry.py
src/tts_proxy/: __init__.py  _http.py  elevenlabs_client.py  errors.py  history_client.py  key_pool.py  models_client.py  pronunciation_client.py  router.py  router_history.py  router_models.py  router_pronunciation.py  router_timestamps.py  router_user.py  router_voices.py  router_websocket.py  schemas.py  server.py  user_client.py  voices_client.py
tests/: conftest.py  test_async.py  test_e2e.py  test_image_lab_job_manager.py  test_integration.py  test_job_manager.py  test_unit.py
tests/e2e/: test_api.py  test_tts_proxy.py
tests/integration/: test_core_integration.py  test_mail_providers.py
tests/smoke/: test_db_health.py  test_imports.py  test_postgres_bootstrap_contract.py  test_startup_contract.py
tests/unit/: test_aa_services_postgres.py  test_api_services.py  test_async_db.py  test_captcha.py  test_checker_service_postgres.py  test_checkers.py  test_config.py  test_config_yaml_extraction.py  test_database.py  test_enums.py  test_errors.py  test_gmail_variations.py  test_internal_api.py  test_internal_client.py  test_mail.py  test_mailbox_routers_postgres.py  test_open_browser_service.py  test_open_browser_session_postgres.py  test_page_utils.py  test_password.py  test_providers_router_postgres.py  test_settings_providers_postgres.py  test_sms_webhook.py  test_storage.py  test_sync_services_postgres.py  test_totp.py  test_tts_errors_http.py  test_tts_key_pool.py  test_tts_schemas.py
tools/: gateway_watchdog.ps1  host_browser_agent.py
ui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
ui/coverage/: lcov.info
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/.cargo/: config.toml
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: lib.rs
(+110 files in other folders)
