[package]
name = "account-creator"
version = "0.1.0"
description = "Account Creator Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
webview2-com = "0.38"
webview2-com-sys = "0.38"
windows = { version = "0.61" }
url = "2"
tokio = { version = "1", features = ["sync", "time"] }

[profile.dev]
debug = 0           # Bỏ debug symbols → linking nhanh hơn ~50%
incremental = true  # Biên dịch tăng dần
